--- a/src/app/modules/cart-page/Components/cart-finalization/cart-finalization.component.scss
+++ b/src/app/modules/cart-page/Components/cart-finalization/cart-finalization.component.scss
@@ -1,4 +1,4 @@
-@import "../../Helpers/variables";
+@import "../../../../Helpers/variables";
 
 .cart-finalization {
   border: 1px solid $color-grey-elements;
